[package]
name = "packed-char"
version = "0.1.1"
edition = "2021"
authors = ["Tim Harding"]
repository = "https://github.com/tim-harding/packed-char"
license = "MIT"
keywords = ["char", "memory", "compress"]
categories = ["compression"]
description = "Stores a char or a 22-bit integer in 32 bits"
readme = "README.md"
